--- a/dapp/package.json
+++ b/dapp/package.json
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.43.9",
     "react-router-dom": "^6.10.0",
     "react-slider": "^2.0.4",
+    "truncate-ethereum-address": "^0.3.0",
     "urql": "^4.0.1",
     "util": "^0.12.5",
     "wagmi": "^0.12.12"
