Use hardhat-toolbox, fix DIA Oracle tests

--- a/contracts/package.json
+++ b/contracts/package.json
@@ -5,12 +5,17 @@
   "scripts": {
     "build": "yarn hardhat clean && yarn hardhat compile && yarn wagmi generate",
     "start": "yarn hardhat node",
+    "test": "yarn hardhat test",
     "deploy:local": "yarn hardhat clean && yarn hardhat compile && yarn hardhat deploy --network localhost && yarn wagmi generate"
   },
   "devDependencies": {
+    "@ethersproject/abi": "^5.7.0",
+    "@ethersproject/providers": "^5.7.2",
+    "@nomicfoundation/hardhat-chai-matchers": "^1.0.6",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.8",
+    "@nomicfoundation/hardhat-toolbox": "^2.0.2",
     "@nomiclabs/hardhat-ethers": "^2.2.3",
-    "@nomiclabs/hardhat-waffle": "^2.0.5",
-    "@nomiclabs/hardhat-web3": "^2.0.0",
+    "@nomiclabs/hardhat-etherscan": "^3.1.7",
     "@openzeppelin/contracts": "^4.8.3",
     "@openzeppelin/contracts-upgradeable": "^4.8.3",
     "@openzeppelin/hardhat-upgrades": "^1.23.0",
@@ -28,9 +33,10 @@
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "ethers": "^5.7.2",
+    "ethers": "^6.3.0",
     "hardhat": "^2.14.0",
     "hardhat-contract-sizer": "^2.8.0",
+    "hardhat-gas-reporter": "^1.0.9",
     "hardhat-tracer": "^2.2.2",
     "solidity-coverage": "^0.8.2",
     "ts-generator": "^0.1.1",
