liquidate overdue loan hook (and other small nits) - updated .env.example for faucet - updated .gitignore

--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,5 @@
 INFURA_API_KEY = 'abc123...........................'
 ALCHEMY_API_KEY = 'xyz789..........................'
 BLOCK_NUMBER = '16391520' # used for tests
-PRIVATE_KEY=
+PRIVATE_KEY= ''
+VITE_CHAIN_NAME = ''
