updated .env example

--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,4 @@ INFURA_API_KEY = 'abc123...........................'
 ALCHEMY_API_KEY = 'xyz789..........................'
 BLOCK_NUMBER = '16391520' # used for tests
 PRIVATE_KEY= ''
-VITE_CHAIN_NAME = ''
+VITE_CHAIN_NAME =local
