--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,3 @@
-# replace with your own values
-INFURA_API_KEY = 'abc123...........................'
-ALCHEMY_API_KEY = 'xyz789..........................'
-BLOCK_NUMBER = '16391520' # used for tests
-PRIVATE_KEY= ''
-VITE_CHAIN_NAME =local
+INFURA_API_KEY=
+PRIVATE_KEY=
+VITE_CHAIN_NAME=local
