separate prod v local build scripts

--- a/dapp/package.json
+++ b/dapp/package.json
@@ -3,10 +3,11 @@
   "version": "0.0.1",
   "scripts": {
     "prepare:local": "cp local.graphclientrc.yml .graphclientrc.yml",
-    "prepare:prod": "cp prod.graphclientrc.yml .graphclientrc.yml",
+    "prepare:prod": "cp prod.graphclientrc.yml .graphclientrc.yml && graphclient build && rm /opt/buildhome/repo/.graphclient/package.json",
     "build:graphclient": "graphclient build && rm .graphclient/package.json",
     "start": "yarn prepare:local && yarn build:graphclient && vite",
-    "build": "yarn prepare:prod && yarn build:graphclient && tsc && vite build",
+    "build:local": "yarn prepare:local && tsc && vite build",
+    "build:prod": "yarn prepare:prod && tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
