--- a/faucet/package.json
+++ b/faucet/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "start": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "rome format ./src",
+    "format:write": "rome format ./src --write",
+    "lint": "rome check ./src "
   },
   "dependencies": {
     "buffer": "^6.0.3",
@@ -24,6 +27,7 @@
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.0.0",
     "dotenv": "^16.0.3",
+    "rome": "^12.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4",
     "vite": "^4.3.3"
