allow implict any

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "module": "ESNext",
     "moduleResolution": "Node",
     "noEmit": true,
+    "noImplicitAny": false,
     "paths": {
       "@/*": ["./dapp/src/*"]
     },
