--- a/.github/workflows/subgraph.yml
+++ b/.github/workflows/subgraph.yml
@@ -11,18 +11,18 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Install node_modules
-      working-directory: ./subgraph
-      run: yarn install
+      working-directory: ./
+      run: yarn subgraph install
     - name: Run ESlint checks
-      working-directory: ./subgraph
-      run: yarn format:write;
+      working-directory: ./
+      run: yarn subgraph format:write;
   codegen:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
     - name: Install node_modules
-      working-directory: ./subgraph
-      run: yarn install
+      working-directory: ./
+      run: yarn subgraph install
     - name: Run TypeScript type checks
-      working-directory: ./subgraph
-      run: yarn codegen;
+      working-directory: ./
+      run: yarn subgraph codegen;
