--- a/dapp/package.json
+++ b/dapp/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@graphprotocol/client-urql": "^1.0.18",
+    "axios": "^1.4.0",
     "buffer": "^6.0.3",
     "connectkit": "^1.2.3",
     "dayjs": "^1.11.7",
