--- a/dapp/package.json
+++ b/dapp/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@graphprotocol/client-urql": "^1.0.18",
+    "alchemy-sdk": "^2.8.3",
     "axios": "^1.4.0",
     "buffer": "^6.0.3",
     "connectkit": "^1.2.3",
