initial slither run

--- a/contracts/slither.config.json
+++ b/contracts/slither.config.json
@@ -1,4 +1,4 @@
 {
-  "filter_paths": "(mocks/|test/|@openzeppelin/)",
-  "solc_remaps": "@=../node_modules/@"
+  "solc_remaps": "@=../node_modules/@",
+  "filter_paths": "(node_modules/|test/)"
 }
