--- a/.github/workflows/contracts.yml
+++ b/.github/workflows/contracts.yml
@@ -12,4 +12,4 @@ jobs:
       - uses: actions/checkout@v3
       - uses: crytic/slither-action@v0.3.0
         with:
-          target: 'src/'
+          target: 'contracts/'
