--- a/contracts/package.json
+++ b/contracts/package.json
@@ -3,46 +3,47 @@
   "version": "0.0.1",
   "license": "UNLICENSED",
   "scripts": {
-    "build": "yarn hardhat clean && yarn hardhat compile && yarn wagmi generate",
-    "start": "yarn hardhat node",
-    "test": "yarn hardhat test",
-    "generate": "yarn wagmi generate",
-    "deploy:local": "yarn hardhat clean && yarn hardhat compile && yarn hardhat deploy --network localhost && yarn wagmi generate"
+  "build": "yarn hardhat clean && yarn hardhat compile && yarn wagmi generate",
+  "start": "yarn hardhat node",
+  "test": "yarn hardhat test",
+  "generate": "yarn wagmi generate",
+  "deploy:local": "yarn hardhat clean && yarn hardhat compile && yarn hardhat deploy --network localhost && yarn wagmi generate",
+  "slither": "yarn hardhat clean && yarn hardhat compile && slither . --checklist --show-ignored-findings"
   },
   "devDependencies": {
-    "@ethersproject/abi": "^5.7.0",
-    "@ethersproject/providers": "^5.7.2",
-    "@nomicfoundation/hardhat-chai-matchers": "^1.0.6",
-    "@nomicfoundation/hardhat-network-helpers": "^1.0.8",
-    "@nomicfoundation/hardhat-toolbox": "^2.0.2",
-    "@nomiclabs/hardhat-ethers": "^2.2.3",
-    "@nomiclabs/hardhat-etherscan": "^3.1.7",
-    "@openzeppelin/contracts": "^4.9.2",
-    "@openzeppelin/contracts-upgradeable": "^4.9.2",
-    "@openzeppelin/hardhat-upgrades": "^1.28.0",
-    "@typechain/ethers-v5": "^10.2.0",
-    "@typechain/hardhat": "^6.1.5",
-    "@types/chai": "^4.3.4",
-    "@types/chai-as-promised": "^7.1.5",
-    "@types/mocha": "^10.0.1",
-    "@types/node": "^18.16.2",
-    "@wagmi/cli": "^0.1.15",
-    "chai": "^4.3.7",
-    "dotenv": "^16.0.3",
-    "erc721a": "^4.2.3",
-    "eslint": "^8.39.0",
-    "eslint-config-google": "^0.14.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "ethers": "^5.7.2",
-    "hardhat": "^2.14.0",
-    "hardhat-contract-sizer": "^2.8.0",
-    "hardhat-gas-reporter": "^1.0.9",
-    "hardhat-tracer": "^2.2.2",
-    "solidity-coverage": "^0.8.2",
-    "ts-generator": "^0.1.1",
-    "ts-node": "^10.9.1",
-    "typechain": "^8.1.1",
-    "typescript": "^5.0.4"
+  "@ethersproject/abi": "^5.7.0",
+  "@ethersproject/providers": "^5.7.2",
+  "@nomicfoundation/hardhat-chai-matchers": "^1.0.6",
+  "@nomicfoundation/hardhat-network-helpers": "^1.0.8",
+  "@nomicfoundation/hardhat-toolbox": "^2.0.2",
+  "@nomiclabs/hardhat-ethers": "^2.2.3",
+  "@nomiclabs/hardhat-etherscan": "^3.1.7",
+  "@openzeppelin/contracts": "^4.9.2",
+  "@openzeppelin/contracts-upgradeable": "^4.9.2",
+  "@openzeppelin/hardhat-upgrades": "^1.28.0",
+  "@typechain/ethers-v5": "^10.2.0",
+  "@typechain/hardhat": "^6.1.5",
+  "@types/chai": "^4.3.4",
+  "@types/chai-as-promised": "^7.1.5",
+  "@types/mocha": "^10.0.1",
+  "@types/node": "^18.16.2",
+  "@wagmi/cli": "^0.1.15",
+  "chai": "^4.3.7",
+  "dotenv": "^16.0.3",
+  "erc721a": "^4.2.3",
+  "eslint": "^8.39.0",
+  "eslint-config-google": "^0.14.0",
+  "eslint-config-prettier": "^8.8.0",
+  "eslint-plugin-prettier": "^4.2.1",
+  "ethers": "^5.7.2",
+  "hardhat": "^2.14.0",
+  "hardhat-contract-sizer": "^2.8.0",
+  "hardhat-gas-reporter": "^1.0.9",
+  "hardhat-tracer": "^2.2.2",
+  "solidity-coverage": "^0.8.2",
+  "ts-generator": "^0.1.1",
+  "ts-node": "^10.9.1",
+  "typechain": "^8.1.1",
+  "typescript": "^5.0.4"
   }
 }
