--- a/contracts/slither.config.json
+++ b/contracts/slither.config.json
@@ -1,4 +1,5 @@
 {
+  "detectors_to_exclude": "naming-convention",
   "solc_remaps": "@=../node_modules/@",
   "filter_paths": "(node_modules/|test/)"
 }
