Setup subgraph tests and do first round of subgraph modifications

--- a/subgraph/package.json
+++ b/subgraph/package.json
@@ -8,13 +8,15 @@
     "deploy:local": "graph codegen && graph remove --node http://localhost:8020/ nftyfinance-local && graph create --node http://localhost:8020/ nftyfinance-local && graph deploy -l 0.0.1 --node http://localhost:8020/ --ipfs http://localhost:5001 nftyfinance-local --network mainnet",
     "format": "rome format ./src",
     "format:write": "rome format ./src --write",
-    "lint": "rome check ./src "
+    "lint": "rome check ./src ",
+    "test": "graph test"
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "0.48.0",
     "@graphprotocol/graph-ts": "0.29.3"
   },
   "devDependencies": {
+    "matchstick-as": "^0.5.2",
     "rome": "^12.0.0"
   }
 }
