--- a/subgraph/subgraph.yaml
+++ b/subgraph/subgraph.yaml
@@ -26,9 +26,7 @@ dataSources:
           file: ../contracts/artifacts/@openzeppelin/contracts/token/ERC20/ERC20.sol/ERC20.json
       eventHandlers:
         - event: LoanOriginationFeeSet(uint256)
-          handler: handleProtocolParamsSet
-        # - event: Initialized(uint8)
-        #   handler: handleInitialized
+          handler: handleLoanOriginationFeeSet
         # - event: LiquidatedOverdueLoan(indexed address,uint256,uint256,uint256)
         #   handler: handleLiquidatedOverdueLoan
         # - event: LiquidityAddedToShop(indexed address,uint256,uint256,uint256)
@@ -46,8 +44,8 @@ dataSources:
         #   handler: handleLiquidityShopUnfrozen
         # - event: OfferAccepted(indexed address,indexed address,uint256,uint256)
         #   handler: handleOfferAccepted
-        # - event: OwnershipTransferred(indexed address,indexed address)
-        #   handler: handleOwnershipTransferred
+        - event: OwnershipTransferred(indexed address,indexed address)
+          handler: handleOwnershipTransferred
         # - event: PaidBackLoan(indexed address,indexed
         #     address,uint256,uint256,uint256,uint256,uint256)
         #   handler: handlePaidBackLoan
